{
  "version": 4,
  "terraform_version": "0.14.6",
  "serial": 721,
  "lineage": "f6f9b229-6872-3efe-0410-a378494dd1f9",
  "resources": [
    {
      "module": "module.backend",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2021-02-11T12:35:27.082-08:00",
            "enable_cdn": false,
            "fingerprint": "SdGLBmCoDhM=",
            "health_checks": [
              "projects/my-12345-project/global/healthChecks/check-website-backend"
            ],
            "id": "projects/my-12345-project/global/backendServices/tomcat-backend",
            "load_balancing_scheme": "EXTERNAL",
            "name": "tomcat-backend",
            "port_name": "http",
            "project": "my-12345-project",
            "protocol": "TCP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-12345-project/global/backendServices/tomcat-backend",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "module.backend.google_compute_health_check.hc",
            "module.vpc.google_compute_firewall.allow-bastion",
            "module.vpc.google_compute_firewall.allow-http",
            "module.vpc.google_compute_firewall.allow-internal",
            "module.vpc.google_compute_network.vpc",
            "module.vpc.google_compute_router.router",
            "module.vpc.google_compute_router_nat.nat",
            "module.vpc.google_compute_subnetwork.private",
            "module.vpc.google_compute_subnetwork.public"
          ]
        }
      ]
    },
    {
      "module": "module.backend",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "tomcat1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-7-v20180129",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/my-12345-project/zones/us-central1-a/disks/tomcat1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/my-12345-project/zones/us-central1-a/instances/tomcat1",
            "instance_id": "6288742082081729505",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "custom-1-4608",
            "metadata_fingerprint": "9ymhcKOYmKw=",
            "name": "tomcat1",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/my-12345-project/global/networks/skosolapov-vpc",
                "network_ip": "10.13.2.3",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/my-12345-project/regions/us-central1/subnetworks/private",
                "subnetwork_project": "my-12345-project"
              }
            ],
            "project": "my-12345-project",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-12345-project/zones/us-central1-a/instances/tomcat1",
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "module.vpc.google_compute_firewall.allow-bastion",
            "module.vpc.google_compute_firewall.allow-http",
            "module.vpc.google_compute_firewall.allow-internal",
            "module.vpc.google_compute_network.vpc",
            "module.vpc.google_compute_router.router",
            "module.vpc.google_compute_router_nat.nat",
            "module.vpc.google_compute_subnetwork.private",
            "module.vpc.google_compute_subnetwork.public"
          ]
        }
      ]
    },
    {
      "module": "module.backend",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "tomcat2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-7-v20180129",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/my-12345-project/zones/us-central1-b/disks/tomcat2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/my-12345-project/zones/us-central1-b/instances/tomcat2",
            "instance_id": "1049466092219018209",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "custom-1-4608",
            "metadata_fingerprint": "9ymhcKOYmKw=",
            "name": "tomcat2",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/my-12345-project/global/networks/skosolapov-vpc",
                "network_ip": "10.13.2.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/my-12345-project/regions/us-central1/subnetworks/private",
                "subnetwork_project": "my-12345-project"
              }
            ],
            "project": "my-12345-project",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-12345-project/zones/us-central1-b/instances/tomcat2",
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-b"
          },
          "dependencies": [
            "module.vpc.google_compute_firewall.allow-bastion",
            "module.vpc.google_compute_firewall.allow-http",
            "module.vpc.google_compute_firewall.allow-internal",
            "module.vpc.google_compute_network.vpc",
            "module.vpc.google_compute_router.router",
            "module.vpc.google_compute_router_nat.nat",
            "module.vpc.google_compute_subnetwork.private",
            "module.vpc.google_compute_subnetwork.public"
          ]
        }
      ]
    },
    {
      "module": "module.backend",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "tomcat3",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-7-v20180129",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/my-12345-project/zones/us-central1-c/disks/tomcat3"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/my-12345-project/zones/us-central1-c/instances/tomcat3",
            "instance_id": "3345399568203787233",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "custom-1-4608",
            "metadata_fingerprint": "9ymhcKOYmKw=",
            "name": "tomcat3",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/my-12345-project/global/networks/skosolapov-vpc",
                "network_ip": "10.13.2.4",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/my-12345-project/regions/us-central1/subnetworks/private",
                "subnetwork_project": "my-12345-project"
              }
            ],
            "project": "my-12345-project",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-12345-project/zones/us-central1-c/instances/tomcat3",
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-c"
          },
          "dependencies": [
            "module.vpc.google_compute_firewall.allow-bastion",
            "module.vpc.google_compute_firewall.allow-http",
            "module.vpc.google_compute_firewall.allow-internal",
            "module.vpc.google_compute_network.vpc",
            "module.vpc.google_compute_router.router",
            "module.vpc.google_compute_router_nat.nat",
            "module.vpc.google_compute_subnetwork.private",
            "module.vpc.google_compute_subnetwork.public"
          ]
        }
      ]
    },
    {
      "module": "module.frontend",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "staging_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "projects/my-12345-project/zones/us-central1-c/instanceGroups/staging-instance-group",
                "max_utilization": 0.8
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2021-02-11T12:35:54.496-08:00",
            "enable_cdn": false,
            "fingerprint": "_o1pGMpePwo=",
            "health_checks": [
              "projects/my-12345-project/global/httpHealthChecks/staging-health"
            ],
            "id": "projects/my-12345-project/global/backendServices/staging-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "staging-service",
            "port_name": "http",
            "project": "my-12345-project",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-12345-project/global/backendServices/staging-service",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "module.frontend.google_compute_http_health_check.staging_health",
            "module.frontend.google_compute_instance.default",
            "module.frontend.google_compute_instance_group.staging_group",
            "module.vpc.google_compute_firewall.allow-bastion",
            "module.vpc.google_compute_firewall.allow-http",
            "module.vpc.google_compute_firewall.allow-internal",
            "module.vpc.google_compute_network.vpc",
            "module.vpc.google_compute_router.router",
            "module.vpc.google_compute_router_nat.nat",
            "module.vpc.google_compute_subnetwork.private",
            "module.vpc.google_compute_subnetwork.public"
          ]
        }
      ]
    },
    {
      "module": "module.frontend",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.102.147.204",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2021-02-11T12:35:25.595-08:00",
            "id": "projects/my-12345-project/global/addresses/global-appserver-ip",
            "name": "global-appserver-ip",
            "prefix_length": 0,
            "project": "my-12345-project",
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-12345-project/global/addresses/global-appserver-ip"
          },
          "dependencies": [
            "module.vpc.google_compute_firewall.allow-bastion",
            "module.vpc.google_compute_firewall.allow-http",
            "module.vpc.google_compute_firewall.allow-internal",
            "module.vpc.google_compute_network.vpc",
            "module.vpc.google_compute_router.router",
            "module.vpc.google_compute_router_nat.nat",
            "module.vpc.google_compute_subnetwork.private",
            "module.vpc.google_compute_subnetwork.public"
          ]
        }
      ]
    },
    {
      "module": "module.frontend",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "paas-monitor",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/my-12345-project/global/forwardingRules/global-appserver-ip80",
            "ip_address": "34.102.147.204",
            "ip_protocol": "TCP",
            "load_balancing_scheme": "EXTERNAL",
            "name": "global-appserver-ip80",
            "port_range": "80-80",
            "project": "my-12345-project",
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-12345-project/global/forwardingRules/global-appserver-ip80",
            "target": "https://www.googleapis.com/compute/v1/projects/my-12345-project/global/targetHttpProxies/test-proxy"
          },
          "dependencies": [
            "module.frontend.google_compute_backend_service.staging_service",
            "module.frontend.google_compute_global_address.default",
            "module.frontend.google_compute_http_health_check.staging_health",
            "module.frontend.google_compute_instance.default",
            "module.frontend.google_compute_instance_group.staging_group",
            "module.frontend.google_compute_target_http_proxy.default",
            "module.frontend.google_compute_url_map.default",
            "module.vpc.google_compute_firewall.allow-bastion",
            "module.vpc.google_compute_firewall.allow-http",
            "module.vpc.google_compute_firewall.allow-internal",
            "module.vpc.google_compute_network.vpc",
            "module.vpc.google_compute_router.router",
            "module.vpc.google_compute_router_nat.nat",
            "module.vpc.google_compute_subnetwork.private",
            "module.vpc.google_compute_subnetwork.public"
          ]
        }
      ]
    },
    {
      "module": "module.frontend",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-7-v20180129",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/my-12345-project/zones/us-central1-c/disks/frontend"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/my-12345-project/zones/us-central1-c/instances/frontend",
            "instance_id": "968812980131605473",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "custom-1-4608",
            "metadata_fingerprint": "wmCeoHOYKfA=",
            "metadata_startup_script": "#!/bin/bash\n\nyum install -y nginx\nsudo systemctl enable nginx\nsudo systemctl start nginx\necho \"Hello from Sergey Kosolapov\" \u003e /usr/share/nginx/html/index.html\n",
            "name": "frontend",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/my-12345-project/global/networks/skosolapov-vpc",
                "network_ip": "10.13.1.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/my-12345-project/regions/us-central1/subnetworks/public",
                "subnetwork_project": "my-12345-project"
              }
            ],
            "project": "my-12345-project",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-12345-project/zones/us-central1-c/instances/frontend",
            "tags": [
              "http",
              "ssh"
            ],
            "tags_fingerprint": "7XLBdwIeS7E=",
            "zone": "us-central1-c"
          },
          "dependencies": [
            "module.vpc.google_compute_firewall.allow-bastion",
            "module.vpc.google_compute_firewall.allow-http",
            "module.vpc.google_compute_firewall.allow-internal",
            "module.vpc.google_compute_network.vpc",
            "module.vpc.google_compute_router.router",
            "module.vpc.google_compute_router_nat.nat",
            "module.vpc.google_compute_subnetwork.private",
            "module.vpc.google_compute_subnetwork.public"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.frontend",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-02-11T12:36:17.824-08:00",
            "id": "projects/my-12345-project/global/targetHttpProxies/test-proxy",
            "name": "test-proxy",
            "project": "my-12345-project",
            "proxy_id": 240255474392902574,
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-12345-project/global/targetHttpProxies/test-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/my-12345-project/global/urlMaps/url-map"
          },
          "dependencies": [
            "module.frontend.google_compute_backend_service.staging_service",
            "module.frontend.google_compute_http_health_check.staging_health",
            "module.frontend.google_compute_instance.default",
            "module.frontend.google_compute_instance_group.staging_group",
            "module.frontend.google_compute_url_map.default",
            "module.vpc.google_compute_firewall.allow-bastion",
            "module.vpc.google_compute_firewall.allow-http",
            "module.vpc.google_compute_firewall.allow-internal",
            "module.vpc.google_compute_network.vpc",
            "module.vpc.google_compute_router.router",
            "module.vpc.google_compute_router_nat.nat",
            "module.vpc.google_compute_subnetwork.private",
            "module.vpc.google_compute_subnetwork.public"
          ]
        }
      ]
    },
    {
      "module": "module.frontend",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-02-11T12:36:06.107-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/my-12345-project/global/backendServices/staging-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "uiuGWele2Tw=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/my-12345-project/global/urlMaps/url-map",
            "map_id": 4349773701823605721,
            "name": "url-map",
            "path_matcher": [],
            "project": "my-12345-project",
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-12345-project/global/urlMaps/url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.frontend.google_compute_backend_service.staging_service",
            "module.frontend.google_compute_http_health_check.staging_health",
            "module.frontend.google_compute_instance.default",
            "module.frontend.google_compute_instance_group.staging_group",
            "module.vpc.google_compute_firewall.allow-bastion",
            "module.vpc.google_compute_firewall.allow-http",
            "module.vpc.google_compute_firewall.allow-internal",
            "module.vpc.google_compute_network.vpc",
            "module.vpc.google_compute_router.router",
            "module.vpc.google_compute_router_nat.nat",
            "module.vpc.google_compute_subnetwork.private",
            "module.vpc.google_compute_subnetwork.public"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-02-11T12:34:48.387-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/my-12345-project/global/firewalls/fw-allow-bastion",
            "log_config": [],
            "name": "fw-allow-bastion",
            "network": "https://www.googleapis.com/compute/v1/projects/my-12345-project/global/networks/skosolapov-vpc",
            "priority": 1000,
            "project": "my-12345-project",
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-12345-project/global/firewalls/fw-allow-bastion",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-02-11T12:34:48.511-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/my-12345-project/global/firewalls/fw-allow-http",
            "log_config": [],
            "name": "fw-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/my-12345-project/global/networks/skosolapov-vpc",
            "priority": 1000,
            "project": "my-12345-project",
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-12345-project/global/firewalls/fw-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "http"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2021-02-11T12:34:48.600-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/my-12345-project/global/firewalls/fw-allow-internal",
            "log_config": [],
            "name": "fw-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/my-12345-project/global/networks/skosolapov-vpc",
            "priority": 1000,
            "project": "my-12345-project",
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-12345-project/global/firewalls/fw-allow-internal",
            "source_ranges": [
              "10.13.1.0/24",
              "10.13.2.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/my-12345-project/global/networks/skosolapov-vpc",
            "mtu": 0,
            "name": "skosolapov-vpc",
            "project": "my-12345-project",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-12345-project/global/networks/skosolapov-vpc"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "DEFAULT",
                "asn": 64514
              }
            ],
            "creation_timestamp": "2021-02-11T12:35:01.843-08:00",
            "id": "projects/my-12345-project/regions/us-central1/routers/my-router",
            "name": "my-router",
            "network": "https://www.googleapis.com/compute/v1/projects/my-12345-project/global/networks/skosolapov-vpc",
            "project": "my-12345-project",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-12345-project/regions/us-central1/routers/my-router"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc",
            "module.vpc.google_compute_subnetwork.private"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "my-12345-project/us-central1/my-router/my-router-nat",
            "log_config": [
              {
                "enable": true,
                "filter": "ERRORS_ONLY"
              }
            ],
            "min_ports_per_vm": 0,
            "name": "my-router-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "my-12345-project",
            "region": "us-central1",
            "router": "my-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc",
            "module.vpc.google_compute_router.router",
            "module.vpc.google_compute_subnetwork.private"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-02-11T12:34:50.200-08:00",
            "gateway_address": "10.13.2.1",
            "id": "projects/my-12345-project/regions/us-central1/subnetworks/private",
            "ip_cidr_range": "10.13.2.0/24",
            "name": "private",
            "network": "https://www.googleapis.com/compute/v1/projects/my-12345-project/global/networks/skosolapov-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "my-12345-project",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-12345-project/regions/us-central1/subnetworks/private"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-02-11T12:34:48.581-08:00",
            "gateway_address": "10.13.1.1",
            "id": "projects/my-12345-project/regions/us-central1/subnetworks/public",
            "ip_cidr_range": "10.13.1.0/24",
            "name": "public",
            "network": "https://www.googleapis.com/compute/v1/projects/my-12345-project/global/networks/skosolapov-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "my-12345-project",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-12345-project/regions/us-central1/subnetworks/public"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}